# browser-use

./: AGENTS.md  CLAUDE.md
contrib/mcp/: mcp-launch.py
docs/: index.md
docs/architecture/: 00-system-overview.md  01-cdp-transport-and-session-manager.md  02-event-bus-and-watchdogs.md  03-dom-perception-pipeline.md  04-tools-and-action-registry.md  05-agent-control-loop.md  06-llm-provider-abstraction.md  07-mcp-integration.md  08-actor-scripting-api.md  09-configuration-logging-bootstrap.md  10-cross-cutting-services.md  11-beta-rust-bridge.md  12-rust-implementation.md  index.md
docs/issues/: README.md
docs/learning/: 2026-07-05-openai-gateway-sdk-fingerprint-block.md  README.md
docs/plans/: README.md
docs/plans/2026-07-05-franky-repo-setup/: index.md
docs/plans/2026-07-05-rust-rewrite/: architecture.md  index.md  parity-plan.md  plan.md  porting-map.md  progress.md  review.md  tdd-strategy.md
docs/practices/: README.md
docs/usage/: README.md
docs/usage/developers/: README.md
docs/usage/tools/: README.md  mcp-multi-agent-setup.md
docs/usage/users/: README.md
rust/: Cargo.toml  README.md
rust/ci/: rust.yml
rust/crates/bu-actor/: Cargo.toml
rust/crates/bu-actor/src/: lib.rs  tests.rs
rust/crates/bu-agent/: Cargo.toml
rust/crates/bu-agent/src/: action.rs  lib.rs  report.rs
rust/crates/bu-bus/: Cargo.toml
rust/crates/bu-bus/src/: lib.rs
rust/crates/bu-cdp/: Cargo.toml
rust/crates/bu-cdp/src/: discovery.rs  dom.rs  geometry.rs  lib.rs  live_tests.rs  security.rs
rust/crates/bu-config/: Cargo.toml
rust/crates/bu-core/: Cargo.toml
rust/crates/bu-core/src/: main.rs
rust/crates/bu-dom/: Cargo.toml
rust/crates/bu-dom/src/: lib.rs
rust/crates/bu-llm/: Cargo.toml
rust/crates/bu-llm/src/: bedrock.rs  lib.rs  message.rs  openai.rs
rust/crates/bu-mcp/: Cargo.toml
rust/crates/bu-mcp/src/: lib.rs  tests.rs  tools.rs
rust/crates/bu-session/: Cargo.toml
rust/crates/bu-session/src/: lib.rs
rust/crates/bu-tools/: Cargo.toml
rust/crates/bu-tools/src/: lib.rs
