[workspace]
resolver = "2"
members = [
    "crates/bu-cdp",
    "crates/bu-session",
    "crates/bu-bus",
    "crates/bu-dom",
    "crates/bu-tools",
    "crates/bu-llm",
    "crates/bu-agent",
    "crates/bu-mcp",
    "crates/bu-actor",
    "crates/bu-config",
    "crates/bu-core",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures-util = "0.3"
rmcp = { version = "2.1", features = ["transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
