[package]
name = "bu-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bu-actor = { path = "../bu-actor" }
bu-dom = { path = "../bu-dom" }
bu-llm = { path = "../bu-llm" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
live-chrome = ["bu-actor/live-chrome"]
