[package]
name = "bu-cdp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chromiumoxide.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[features]
live-chrome = []
