[package]
name = "bu-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
aws-config = { version = "1", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-smithy-types = { version = "1", optional = true }

[features]
# AWS Bedrock provider parity with the Python MCP server (MODEL_PROVIDER=bedrock).
# Off by default so the OpenAI-compatible binary stays lean; build with
# `--features bedrock` for AWS deployments.
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
