[package]
name = "bu-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bu-agent = { path = "../bu-agent" }
bu-actor = { path = "../bu-actor" }
bu-dom = { path = "../bu-dom" }
bu-llm = { path = "../bu-llm" }
rmcp.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
live-chrome = ["bu-actor/live-chrome", "bu-agent/live-chrome"]
